k8s/backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: backend
    namespace: diploma
spec:
    replicas: 1
    selector:
        matchLabels:
            app: backend
    template:
        metadata:
            labels:
                app: backend
        spec:
            containers:
                - name: backend
                  image: 8vladpavliuk8/diploma-backend:7e716f7
                  imagePullPolicy: Always
                  ports:
                      - containerPort: 5000
                  resources:
                      requests:
                          cpu: '100m'
                          memory: '128Mi'
                      limits:
                          cpu: '500m'
                          memory: '256Mi'
                  readinessProbe:
                      httpGet:
                          path: /api/health
                          port: 5000
                      initialDelaySeconds: 5
                      periodSeconds: 10
                  livenessProbe:
                      httpGet:
                          path: /api/health
                          port: 5000
                      initialDelaySeconds: 10
                      periodSeconds: 15
---
apiVersion: v1
kind: Service
metadata:
    name: backend
    namespace: diploma
spec:
    selector:
        app: backend
    ports:
        - port: 5000
          targetPort: 5000
